Enhance notebooks with algorithms and data structures
- Added comprehensive sections on sorting algorithms, graph search algorithms, and dynamic programming patterns in `sorting_graphs_dp.ipynb`.
- Introduced KMP and Rabin-Karp pattern search algorithms, along with Trie implementation for prefix search in `strings_trie_search.ipynb`.
- Implemented topological sorting and cycle detection in directed acyclic graphs in `dag.ipynb`.
- Demonstrated heap operations and Union-Find structure with Bloom and Count-Min sketches in `heap_unionfind_sketches.ipynb`.
- Created a priority queue implementation and bounded queue demo using asyncio in `queue.ipynb`.
- Summarized search complexities and provided examples of binary search and A* algorithm in `search.ipynb`.
- Added level order traversal and balance checking for binary trees in `tree.ipynb`.
- Included tree visualization methods with ASCII fallback in `visualize_tree.ipynb`.
- Applied Dependency Inversion Principle (DIP) with examples in `dip.ipynb`.
- Introduced property-based testing, profiling, and concurrency patterns in `testing_profiling_concurrency.ipynb`.

--- a/computer science related/data structure and algorithm/algorithm/sorting_graphs_dp.ipynb
+++ b/computer science related/data structure and algorithm/algorithm/sorting_graphs_dp.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e43feba8",
+   "metadata": {},
+   "source": [
+    "# Sorting, Graph Paths, Dynamic Programming\n",
+    "Objectives:\n",
+    "- In-place quicksort vs heapsort vs nth_element\n",
+    "- Dijkstra vs A* vs BFS on a grid\n",
+    "- DP patterns: LIS, knapsack, edit distance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c9f0dbc7",
@@ -13,6 +25,165 @@
     "from pathlib import Path\n",
     "\n",
     "# TODO: implement sort benchmarks, graph searches, and DP examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce64bf62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq, random, timeit\n",
+    "\n",
+    "def quicksort_inplace(arr, lo=0, hi=None):\n",
+    "    if hi is None: hi = len(arr) - 1\n",
+    "    if lo >= hi: return\n",
+    "    pivot = arr[(lo + hi)//2]\n",
+    "    i, j = lo, hi\n",
+    "    while i <= j:\n",
+    "        while arr[i] < pivot: i += 1\n",
+    "        while arr[j] > pivot: j -= 1\n",
+    "        if i <= j:\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    "            i += 1; j -= 1\n",
+    "    quicksort_inplace(arr, lo, j)\n",
+    "    quicksort_inplace(arr, i, hi)\n",
+    "\n",
+    "def bench_sorts(n=50_000):\n",
+    "    data = [random.randint(0, 1_000_000) for _ in range(n)]\n",
+    "    cases = {\n",
+    "        \"quicksort\": lambda: quicksort_inplace(data.copy()),\n",
+    "        \"sorted_builtin\": lambda: sorted(data),\n",
+    "        \"heapsort\": lambda: [heapq.heappop(heapq.heapify(list(data)) or []) for _ in range(len(data))],\n",
+    "        \"nth_element\": lambda: heapq.nsmallest(10, data),\n",
+    "    }\n",
+    "    return {k: timeit.timeit(v, number=1) for k, v in cases.items()}\n",
+    "\n",
+    "bench_sorts(20_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7958635f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import heappush, heappop\n",
+    "\n",
+    "def grid_neighbors(r, c, rows, cols):\n",
+    "    for dr, dc in ((1,0),(-1,0),(0,1),(0,-1)):\n",
+    "        nr, nc = r+dr, c+dc\n",
+    "        if 0 <= nr < rows and 0 <= nc < cols:\n",
+    "            yield nr, nc\n",
+    "\n",
+    "def bfs_grid(rows=5, cols=5, start=(0,0), goal=(4,4)):\n",
+    "    from collections import deque\n",
+    "    q = deque([start]); seen = {start}; parent = {}\n",
+    "    while q:\n",
+    "        r, c = q.popleft()\n",
+    "        if (r, c) == goal: break\n",
+    "        for nr, nc in grid_neighbors(r, c, rows, cols):\n",
+    "            if (nr, nc) not in seen:\n",
+    "                seen.add((nr, nc))\n",
+    "                parent[(nr, nc)] = (r, c)\n",
+    "                q.append((nr, nc))\n",
+    "    return parent\n",
+    "\n",
+    "def dijkstra_grid(costs, start, goal):\n",
+    "    rows, cols = len(costs), len(costs[0])\n",
+    "    pq = [(0, start)]; dist = {start: 0}; parent = {}\n",
+    "    while pq:\n",
+    "        d, node = heappop(pq)\n",
+    "        if node == goal: break\n",
+    "        if d != dist[node]: continue\n",
+    "        for nbr in grid_neighbors(*node, rows, cols):\n",
+    "            nd = d + costs[nbr[0]][nbr[1]]\n",
+    "            if nd < dist.get(nbr, float('inf')):\n",
+    "                dist[nbr] = nd\n",
+    "                parent[nbr] = node\n",
+    "                heappush(pq, (nd, nbr))\n",
+    "    return parent, dist.get(goal)\n",
+    "\n",
+    "def astar_grid(costs, start, goal):\n",
+    "    rows, cols = len(costs), len(costs[0])\n",
+    "    def h(pos):\n",
+    "        return abs(pos[0]-goal[0]) + abs(pos[1]-goal[1])\n",
+    "    pq = [(0, start)]; g = {start: 0}; parent = {}\n",
+    "    while pq:\n",
+    "        f, node = heappop(pq)\n",
+    "        if node == goal: break\n",
+    "        for nbr in grid_neighbors(*node, rows, cols):\n",
+    "            tentative = g[node] + costs[nbr[0]][nbr[1]]\n",
+    "            if tentative < g.get(nbr, float('inf')):\n",
+    "                g[nbr] = tentative\n",
+    "                parent[nbr] = node\n",
+    "                heappush(pq, (tentative + h(nbr), nbr))\n",
+    "    return parent, g.get(goal)\n",
+    "\n",
+    "costs = [[1]*5 for _ in range(5)]\n",
+    "parent_bfs = bfs_grid()\n",
+    "parent_dij, dist_dij = dijkstra_grid(costs, (0,0), (4,4))\n",
+    "parent_astar, dist_astar = astar_grid(costs, (0,0), (4,4))\n",
+    "dist_dij, dist_astar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd22e94a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lis(seq):\n",
+    "    import bisect\n",
+    "    tails = []\n",
+    "    for x in seq:\n",
+    "        i = bisect.bisect_left(tails, x)\n",
+    "        if i == len(tails): tails.append(x)\n",
+    "        else: tails[i] = x\n",
+    "    return len(tails)\n",
+    "\n",
+    "def knapsack(weights, values, capacity):\n",
+    "    n = len(weights)\n",
+    "    dp = [[0]*(capacity+1) for _ in range(n+1)]\n",
+    "    for i in range(1, n+1):\n",
+    "        w, v = weights[i-1], values[i-1]\n",
+    "        for c in range(capacity+1):\n",
+    "            dp[i][c] = dp[i-1][c]\n",
+    "            if w <= c:\n",
+    "                dp[i][c] = max(dp[i][c], v + dp[i-1][c-w])\n",
+    "    return dp[n][capacity]\n",
+    "\n",
+    "def edit_distance(a: str, b: str):\n",
+    "    dp = [[0]*(len(b)+1) for _ in range(len(a)+1)]\n",
+    "    for i in range(len(a)+1): dp[i][0] = i\n",
+    "    for j in range(len(b)+1): dp[0][j] = j\n",
+    "    for i in range(1, len(a)+1):\n",
+    "        for j in range(1, len(b)+1):\n",
+    "            cost = 0 if a[i-1] == b[j-1] else 1\n",
+    "            dp[i][j] = min(\n",
+    "                dp[i-1][j] + 1,\n",
+    "                dp[i][j-1] + 1,\n",
+    "                dp[i-1][j-1] + cost,\n",
+    "            )\n",
+    "    return dp[-1][-1]\n",
+    "\n",
+    "lis([3,1,5,2,6])\n",
+    "knapsack([2,3,4], [4,5,6], 5)\n",
+    "edit_distance(\"kitten\", \"sitting\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb3d5702",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- Quicksort in-place expected O(n log n), heapsort O(n log n), nth_element ~ O(n log k).\n",
+    "- BFS shortest paths on unweighted graphs; Dijkstra for weighted; A* uses heuristic to guide search.\n",
+    "- DP examples show classic table + n log n LIS with patience sorting."
    ]
   }
  ],
