--- a/computer science related/data structure and algorithm/algorithm/strings_trie_search.ipynb
+++ b/computer science related/data structure and algorithm/algorithm/strings_trie_search.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "99a36c49",
+   "metadata": {},
+   "source": [
+    "# String Algorithms and Tries\n",
+    "Objectives:\n",
+    "- KMP and Rabin-Karp pattern search\n",
+    "- Trie for prefix search + autocomplete\n",
+    "- Timing comparisons on varied patterns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc381cfa",
@@ -12,6 +24,134 @@
     "from pathlib import Path\n",
     "\n",
     "# TODO: add KMP/Rabin-Karp and trie implementations with timing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bb41f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kmp_prefix(pattern: str):\n",
+    "    pi = [0]*len(pattern)\n",
+    "    k = 0\n",
+    "    for i in range(1, len(pattern)):\n",
+    "        while k > 0 and pattern[k] != pattern[i]:\n",
+    "            k = pi[k-1]\n",
+    "        if pattern[k] == pattern[i]:\n",
+    "            k += 1\n",
+    "        pi[i] = k\n",
+    "    return pi\n",
+    "\n",
+    "def kmp_search(text: str, pattern: str):\n",
+    "    if not pattern: return []\n",
+    "    pi = kmp_prefix(pattern)\n",
+    "    matches = []; k = 0\n",
+    "    for i, ch in enumerate(text):\n",
+    "        while k > 0 and pattern[k] != ch:\n",
+    "            k = pi[k-1]\n",
+    "        if pattern[k] == ch:\n",
+    "            k += 1\n",
+    "            if k == len(pattern):\n",
+    "                matches.append(i - k + 1)\n",
+    "                k = pi[k-1]\n",
+    "    return matches\n",
+    "\n",
+    "def rabin_karp(text: str, pattern: str, base=256, mod=101):\n",
+    "    n, m = len(text), len(pattern)\n",
+    "    if m == 0 or m > n: return []\n",
+    "    h = pow(base, m-1, mod)\n",
+    "    p_hash = t_hash = 0\n",
+    "    for i in range(m):\n",
+    "        p_hash = (p_hash*base + ord(pattern[i])) % mod\n",
+    "        t_hash = (t_hash*base + ord(text[i])) % mod\n",
+    "    matches = []\n",
+    "    for i in range(n-m+1):\n",
+    "        if p_hash == t_hash and text[i:i+m] == pattern:\n",
+    "            matches.append(i)\n",
+    "        if i < n-m:\n",
+    "            t_hash = (t_hash - ord(text[i])*h) % mod\n",
+    "            t_hash = (t_hash*base + ord(text[i+m])) % mod\n",
+    "            t_hash %= mod\n",
+    "    return matches\n",
+    "\n",
+    "kmp_search(\"ababcabcababd\", \"ababd\"), rabin_karp(\"ababcabcababd\", \"ababd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "541b7d92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrieNode:\n",
+    "    def __init__(self):\n",
+    "        self.children = {}\n",
+    "        self.end = False\n",
+    "\n",
+    "class Trie:\n",
+    "    def __init__(self):\n",
+    "        self.root = TrieNode()\n",
+    "\n",
+    "    def insert(self, word):\n",
+    "        node = self.root\n",
+    "        for ch in word:\n",
+    "            node = node.children.setdefault(ch, TrieNode())\n",
+    "        node.end = True\n",
+    "\n",
+    "    def _collect(self, node, prefix, out):\n",
+    "        if node.end: out.append(prefix)\n",
+    "        for ch, child in node.children.items():\n",
+    "            self._collect(child, prefix+ch, out)\n",
+    "\n",
+    "    def autocomplete(self, prefix):\n",
+    "        node = self.root\n",
+    "        for ch in prefix:\n",
+    "            if ch not in node.children:\n",
+    "                return []\n",
+    "            node = node.children[ch]\n",
+    "        out = []\n",
+    "        self._collect(node, prefix, out)\n",
+    "        return out\n",
+    "\n",
+    "trie = Trie()\n",
+    "for word in [\"car\", \"card\", \"care\", \"cart\", \"dog\", \"dot\"]:\n",
+    "    trie.insert(word)\n",
+    "trie.autocomplete(\"car\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8904287e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import timeit, random, string\n",
+    "\n",
+    "def random_text(n=10000):\n",
+    "    return \"\".join(random.choice(string.ascii_lowercase) for _ in range(n))\n",
+    "\n",
+    "text = random_text(20000)\n",
+    "pattern = text[500:520]\n",
+    "\n",
+    "bench = {\n",
+    "    \"kmp\": lambda: kmp_search(text, pattern),\n",
+    "    \"rabin_karp\": lambda: rabin_karp(text, pattern),\n",
+    "}\n",
+    "{k: timeit.timeit(v, number=3) for k, v in bench.items()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c8ae1db",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- KMP guarantees O(n + m) worst-case search; Rabin-Karp is good for multiple pattern hashes.\n",
+    "- Tries trade space for fast prefix queries; use when you need autocomplete or prefix stats."
    ]
   }
  ],
