--- a/computer science related/data structure and algorithm/data structure/dag.ipynb
+++ b/computer science related/data structure and algorithm/data structure/dag.ipynb
@@ -94,6 +94,73 @@
     "visited = set()\n",
     "dfs(\"fastapi\", graph, visited)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "163f68a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque, defaultdict\n",
+    "\n",
+    "def topo_sort(graph):\n",
+    "    indeg = defaultdict(int)\n",
+    "    for u, nbrs in graph.items():\n",
+    "        indeg.setdefault(u, 0)\n",
+    "        for v in nbrs:\n",
+    "            indeg[v] += 1\n",
+    "    q = deque([n for n, d in indeg.items() if d == 0])\n",
+    "    order = []\n",
+    "    while q:\n",
+    "        u = q.popleft()\n",
+    "        order.append(u)\n",
+    "        for v in graph.get(u, []):\n",
+    "            indeg[v] -= 1\n",
+    "            if indeg[v] == 0:\n",
+    "                q.append(v)\n",
+    "    if len(order) != len(indeg):\n",
+    "        raise ValueError(\"cycle detected\")\n",
+    "    return order\n",
+    "\n",
+    "topo_sort(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67cd0e6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_cycle(graph):\n",
+    "    WHITE, GRAY, BLACK = 0, 1, 2\n",
+    "    color = {node: WHITE for node in graph}\n",
+    "\n",
+    "    def dfs(node):\n",
+    "        color[node] = GRAY\n",
+    "        for nbr in graph[node]:\n",
+    "            if color.get(nbr, WHITE) == GRAY:\n",
+    "                return True\n",
+    "            if color.get(nbr, WHITE) == WHITE and dfs(nbr):\n",
+    "                return True\n",
+    "        color[node] = BLACK\n",
+    "        return False\n",
+    "\n",
+    "    return any(dfs(node) for node in graph if color[node] == WHITE)\n",
+    "\n",
+    "has_cycle(graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c06ad3a1",
+   "metadata": {},
+   "source": [
+    "Use cases: build systems, dependency graphs, task schedulers, version histories. Try:\n",
+    "- Add an extra edge to create a cycle and confirm `has_cycle` raises/returns True.\n",
+    "- Print the topological order and compare to `pip list --format=json` dependency graphs."
+   ]
   }
  ],
  "metadata": {
