--- a/computer science related/data structure and algorithm/data structure/heap_unionfind_sketches.ipynb
+++ b/computer science related/data structure and algorithm/data structure/heap_unionfind_sketches.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "69733a51",
+   "metadata": {},
+   "source": [
+    "# Heaps, Union-Find, Bloom/Count-Min\n",
+    "Objectives:\n",
+    "- Binary heap ops (push/pop) complexity demo\n",
+    "- Union-Find with path compression and union by rank\n",
+    "- Bloom filter / Count-Min Sketch accuracy experiment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "39db5af2",
@@ -14,6 +26,135 @@
     "from pathlib import Path\n",
     "\n",
     "# TODO: add heap demos, union-find, and sketch experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8f6f043",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq, random, timeit\n",
+    "\n",
+    "def heap_demo(n=10):\n",
+    "    data = [random.randint(1, 100) for _ in range(n)]\n",
+    "    heapq.heapify(data)\n",
+    "    pops = [heapq.heappop(data) for _ in range(len(data))]\n",
+    "    return pops\n",
+    "\n",
+    "def heap_push_pop_perf(n=10000):\n",
+    "    data = []\n",
+    "    return timeit.timeit(lambda: (heapq.heappush(data, random.random()), heapq.heappop(data)), number=n)\n",
+    "\n",
+    "heap_demo(), heap_push_pop_perf(5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42875fe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UnionFind:\n",
+    "    def __init__(self, n):\n",
+    "        self.parent = list(range(n))\n",
+    "        self.rank = [0]*n\n",
+    "\n",
+    "    def find(self, x):\n",
+    "        if self.parent[x] != x:\n",
+    "            self.parent[x] = self.find(self.parent[x])\n",
+    "        return self.parent[x]\n",
+    "\n",
+    "    def union(self, a, b):\n",
+    "        ra, rb = self.find(a), self.find(b)\n",
+    "        if ra == rb: return False\n",
+    "        if self.rank[ra] < self.rank[rb]:\n",
+    "            ra, rb = rb, ra\n",
+    "        self.parent[rb] = ra\n",
+    "        if self.rank[ra] == self.rank[rb]:\n",
+    "            self.rank[ra] += 1\n",
+    "        return True\n",
+    "\n",
+    "uf = UnionFind(5)\n",
+    "uf.union(0,1); uf.union(1,2); uf.union(3,4)\n",
+    "{i: uf.find(i) for i in range(5)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce4af4be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math, hashlib\n",
+    "\n",
+    "class BloomFilter:\n",
+    "    def __init__(self, m: int, k: int):\n",
+    "        self.bits = 0\n",
+    "        self.m = m\n",
+    "        self.k = k\n",
+    "\n",
+    "    def _hashes(self, item: str):\n",
+    "        for i in range(self.k):\n",
+    "            h = hashlib.blake2b(f\"{item}:{i}\".encode(), digest_size=4).digest()\n",
+    "            yield int.from_bytes(h, \"big\") % self.m\n",
+    "\n",
+    "    def add(self, item: str):\n",
+    "        for h in self._hashes(item):\n",
+    "            self.bits |= (1 << h)\n",
+    "\n",
+    "    def __contains__(self, item: str):\n",
+    "        return all(self.bits & (1 << h) for h in self._hashes(item))\n",
+    "\n",
+    "bf = BloomFilter(m=64, k=3)\n",
+    "for word in [\"apple\", \"banana\", \"cherry\"]:\n",
+    "    bf.add(word)\n",
+    "\"apple\" in bf, \"grape\" in bf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e97e427",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CountMinSketch:\n",
+    "    def __init__(self, width=64, depth=4):\n",
+    "        self.width = width\n",
+    "        self.depth = depth\n",
+    "        self.table = [[0]*width for _ in range(depth)]\n",
+    "\n",
+    "    def _hashes(self, key):\n",
+    "        for i in range(self.depth):\n",
+    "            h = hashlib.blake2b(f\"{key}:{i}\".encode(), digest_size=4).digest()\n",
+    "            yield int.from_bytes(h, \"big\") % self.width\n",
+    "\n",
+    "    def add(self, key, count=1):\n",
+    "        for row, h in enumerate(self._hashes(key)):\n",
+    "            self.table[row][h] += count\n",
+    "\n",
+    "    def estimate(self, key):\n",
+    "        return min(self.table[row][h] for row, h in enumerate(self._hashes(key)))\n",
+    "\n",
+    "cms = CountMinSketch()\n",
+    "for word in [\"a\", \"b\", \"a\", \"c\", \"a\", \"b\"]:\n",
+    "    cms.add(word)\n",
+    "cms.estimate(\"a\"), cms.estimate(\"b\"), cms.estimate(\"c\"), cms.estimate(\"z\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c9bb0f2",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- Heaps give O(log n) push/pop; great for priority queues and streaming top-k.\n",
+    "- Union-Find enables near-constant amortized merges/queries for connectivity problems.\n",
+    "- Bloom filters and Count-Min Sketches trade exactness for sub-linear memory; false positives and overestimates only."
    ]
   }
  ],
