--- a/computer science related/data structure and algorithm/data structure/queue.ipynb
+++ b/computer science related/data structure and algorithm/data structure/queue.ipynb
@@ -171,6 +171,74 @@
     "\n",
     "await main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7784393a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "class PriorityQueue:\n",
+    "    def __init__(self):\n",
+    "        self._heap = []\n",
+    "\n",
+    "    def push(self, priority, item):\n",
+    "        heapq.heappush(self._heap, (priority, item))\n",
+    "\n",
+    "    def pop(self):\n",
+    "        return heapq.heappop(self._heap)\n",
+    "\n",
+    "pq = PriorityQueue()\n",
+    "pq.push(10, \"low\")\n",
+    "pq.push(1, \"urgent\")\n",
+    "pq.push(5, \"medium\")\n",
+    "[pq.pop(), pq.pop(), pq.pop()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "501721c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def bounded_producer(q: asyncio.Queue, n=5):\n",
+    "    for i in range(n):\n",
+    "        await q.put(i)\n",
+    "        print(f\"enqueued {i}, size={q.qsize()}\")\n",
+    "    await q.put(None)\n",
+    "\n",
+    "async def slow_consumer(q: asyncio.Queue):\n",
+    "    while True:\n",
+    "        item = await q.get()\n",
+    "        if item is None:\n",
+    "            q.task_done()\n",
+    "            break\n",
+    "        await asyncio.sleep(0.3)\n",
+    "        print(f\"processed {item}\")\n",
+    "        q.task_done()\n",
+    "\n",
+    "async def demo_bounded():\n",
+    "    q = asyncio.Queue(maxsize=2)\n",
+    "    prod = asyncio.create_task(bounded_producer(q))\n",
+    "    cons = asyncio.create_task(slow_consumer(q))\n",
+    "    await asyncio.gather(prod, cons)\n",
+    "\n",
+    "# await demo_bounded()  # uncomment to run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0502aa18",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- Priority queue uses heap; smallest priority first.\n",
+    "- Bounded queues force producers to backpressure when full; great for stabilizing throughput."
+   ]
   }
  ],
  "metadata": {
