--- a/computer science related/data structure and algorithm/data structure/search.ipynb
+++ b/computer science related/data structure and algorithm/data structure/search.ipynb
@@ -235,6 +235,68 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ed6f61",
+   "metadata": {},
+   "source": [
+    "Complexities at a glance:\n",
+    "- Linear search: O(n) over unsorted data.\n",
+    "- Binary search: O(log n) on sorted arrays; rely on random access.\n",
+    "- BFS/DFS on graphs: O(V+E).\n",
+    "- Heuristic search (A*): O(E) but prunes with heuristic; requires admissible heuristic for optimality."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb5ed1ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bisect\n",
+    "\n",
+    "arr = [1, 4, 9, 15, 23]\n",
+    "x = 10\n",
+    "idx = bisect.bisect_left(arr, x)\n",
+    "insert_position = idx\n",
+    "found = idx < len(arr) and arr[idx] == x\n",
+    "{\"insert_at\": insert_position, \"found\": found}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68136186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import heappush, heappop\n",
+    "\n",
+    "def astar_grid(start, goal):\n",
+    "    def h(p): return abs(p[0]-goal[0]) + abs(p[1]-goal[1])\n",
+    "    rows = cols = 5\n",
+    "    def neighbors(r, c):\n",
+    "        for dr, dc in ((1,0),(-1,0),(0,1),(0,-1)):\n",
+    "            nr, nc = r+dr, c+dc\n",
+    "            if 0 <= nr < rows and 0 <= nc < cols:\n",
+    "                yield nr, nc\n",
+    "\n",
+    "    open_set = [(h(start), 0, start)]; came = {}; g = {start: 0}\n",
+    "    while open_set:\n",
+    "        _, cost, node = heappop(open_set)\n",
+    "        if node == goal: break\n",
+    "        for nbr in neighbors(*node):\n",
+    "            ng = cost + 1\n",
+    "            if ng < g.get(nbr, float('inf')):\n",
+    "                g[nbr] = ng\n",
+    "                came[nbr] = node\n",
+    "                heappush(open_set, (ng + h(nbr), ng, nbr))\n",
+    "    return g.get(goal), came\n",
+    "\n",
+    "astar_grid((0,0), (4,4))[0]"
+   ]
   }
  ],
  "metadata": {
