--- a/computer science related/data structure and algorithm/data structure/tree.ipynb
+++ b/computer science related/data structure and algorithm/data structure/tree.ipynb
@@ -177,6 +177,58 @@
     "\n",
     "print(search(root, \"car\"))  # True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c6db7da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def level_order(root):\n",
+    "    if root is None: return []\n",
+    "    q = deque([root]); out = []\n",
+    "    while q:\n",
+    "        node = q.popleft()\n",
+    "        out.append(node.v)\n",
+    "        if node.left: q.append(node.left)\n",
+    "        if node.right: q.append(node.right)\n",
+    "    return out\n",
+    "\n",
+    "level_order(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f1047e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def height(node):\n",
+    "    if node is None: return 0\n",
+    "    return 1 + max(height(node.left), height(node.right))\n",
+    "\n",
+    "def is_balanced(node):\n",
+    "    if node is None: return True\n",
+    "    lh, rh = height(node.left), height(node.right)\n",
+    "    return abs(lh - rh) <= 1 and is_balanced(node.left) and is_balanced(node.right)\n",
+    "\n",
+    "height(root), is_balanced(root)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67b9408d",
+   "metadata": {},
+   "source": [
+    "Exercises:\n",
+    "- Insert values in different orders and observe `height` changes (balanced vs skewed).\n",
+    "- Implement deletion in BST and re-run traversals.\n",
+    "- Swap `TrieNode` to store counts for prefix frequency."
+   ]
   }
  ],
  "metadata": {
