--- a/computer science related/data structure and algorithm/data structure/visualize_tree.ipynb
+++ b/computer science related/data structure and algorithm/data structure/visualize_tree.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a7584327",
+   "metadata": {},
+   "source": [
+    "# Visualize Tree Structures\n",
+    "- Render a small tree with graphviz (if installed).\n",
+    "- Provide a text fallback pretty-printer when graphviz is unavailable.\n",
+    "- Replace the node building section with your own data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "71ccceea",
@@ -65,6 +76,31 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6c28708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_tree(node, prefix=\"\", is_last=True):\n",
+    "    connector = \"└── \" if is_last else \"├── \"\n",
+    "    print(prefix + connector + node.name)\n",
+    "    prefix += \"    \" if is_last else \"│   \"\n",
+    "    for i, child in enumerate(node.children):\n",
+    "        print_tree(child, prefix, i == len(node.children)-1)\n",
+    "\n",
+    "print_tree(root)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe3c7032",
+   "metadata": {},
+   "source": [
+    "If `graphviz` is missing, install with `pip install graphviz` and ensure Graphviz binaries are on PATH. The ASCII fallback works without extra dependencies."
+   ]
   }
  ],
  "metadata": {
