--- a/computer science related/software engineering/dip.ipynb
+++ b/computer science related/software engineering/dip.ipynb
@@ -81,6 +81,69 @@
     "    def place_order(self):\n",
     "        self.logger.log(\"Order placed\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "391bdd6d",
+   "metadata": {},
+   "source": [
+    "### Applying DIP in Python\n",
+    "- Define protocols/ABCs for collaborators.\n",
+    "- Inject dependencies via constructor parameters (or provider/factory).\n",
+    "- Keep composition at the boundary (main/bootstrap), not deep inside logic.\n",
+    "- Prefer small interfaces focused on capabilities, not big god objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b14009f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Protocol, Iterable\n",
+    "\n",
+    "class OrderRepo(Protocol):\n",
+    "    def save(self, order: dict) -> None: ...\n",
+    "    def all(self) -> Iterable[dict]: ...\n",
+    "\n",
+    "class InMemoryOrderRepo:\n",
+    "    def __init__(self):\n",
+    "        self._orders = []\n",
+    "    def save(self, order):\n",
+    "        self._orders.append(order)\n",
+    "    def all(self):\n",
+    "        return list(self._orders)\n",
+    "\n",
+    "class OrderService:\n",
+    "    def __init__(self, repo: OrderRepo, logger):\n",
+    "        self.repo = repo\n",
+    "        self.logger = logger\n",
+    "\n",
+    "    def create(self, order: dict):\n",
+    "        self.repo.save(order)\n",
+    "        self.logger.log(f\"Saved {order}\")\n",
+    "        return order\n",
+    "\n",
+    "class NullLogger:\n",
+    "    def log(self, msg):\n",
+    "        pass\n",
+    "\n",
+    "repo = InMemoryOrderRepo()\n",
+    "svc = OrderService(repo, NullLogger())\n",
+    "svc.create({\"id\": 1, \"item\": \"book\"})\n",
+    "repo.all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ae2a942",
+   "metadata": {},
+   "source": [
+    "Try swapping implementations:\n",
+    "- Replace `InMemoryOrderRepo` with a fake that counts calls for tests.\n",
+    "- Replace `NullLogger` with a logger that raises on certain messages to assert flows."
+   ]
   }
  ],
  "metadata": {
