--- a/computer science related/software engineering/testing_profiling_concurrency.ipynb
+++ b/computer science related/software engineering/testing_profiling_concurrency.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e86f9479",
+   "metadata": {},
+   "source": [
+    "# Testing, Profiling, Concurrency Patterns\n",
+    "Objectives:\n",
+    "- Property-based tests (hypothesis) stub\n",
+    "- Mutation testing mention\n",
+    "- CPU vs memory profiling on a toy service\n",
+    "- Async vs threads vs processes for I/O\n",
+    "- Structured cancellation and timeouts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "635219ab",
@@ -13,6 +27,136 @@
     "from pathlib import Path\n",
     "\n",
     "# TODO: add tests, profiling snippets, and concurrency comparisons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff2bad1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Property-based testing stub (pip install hypothesis)\n",
+    "\n",
+    "try:\n",
+    "    from hypothesis import given, strategies as st\n",
+    "except ImportError:\n",
+    "    given = None\n",
+    "    st = None\n",
+    "\n",
+    "\n",
+    "def reverse_twice(xs):\n",
+    "    return list(reversed(list(reversed(xs))))\n",
+    "\n",
+    "\n",
+    "if given:\n",
+    "    @given(st.lists(st.integers()))\n",
+    "    def test_reverse_twice_is_identity(xs):\n",
+    "        assert reverse_twice(xs) == xs\n",
+    "else:\n",
+    "    print(\"Install hypothesis to run property tests: pip install hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9503475",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tracemalloc, time, math\n",
+    "\n",
+    "def busy_work(n=200_000):\n",
+    "    return sum(math.sqrt(i) for i in range(n))\n",
+    "\n",
+    "tracemalloc.start()\n",
+    "t0 = time.perf_counter()\n",
+    "busy_work(100_000)\n",
+    "elapsed = time.perf_counter() - t0\n",
+    "current, peak = tracemalloc.get_traced_memory()\n",
+    "tracemalloc.stop()\n",
+    "\n",
+    "{\n",
+    "    \"elapsed_s\": round(elapsed, 4),\n",
+    "    \"current_kb\": round(current/1024, 1),\n",
+    "    \"peak_kb\": round(peak/1024, 1),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "191d2426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio, concurrent.futures, time\n",
+    "\n",
+    "async def io_task(delay=0.2):\n",
+    "    await asyncio.sleep(delay)\n",
+    "    return delay\n",
+    "\n",
+    "def thread_task(delay=0.2):\n",
+    "    time.sleep(delay)\n",
+    "    return delay\n",
+    "\n",
+    "def process_task(delay=0.2):\n",
+    "    time.sleep(delay)\n",
+    "    return delay\n",
+    "\n",
+    "async def compare_concurrency(n=10):\n",
+    "    t0 = time.perf_counter()\n",
+    "    await asyncio.gather(*(io_task() for _ in range(n)))\n",
+    "    async_elapsed = time.perf_counter() - t0\n",
+    "\n",
+    "    with concurrent.futures.ThreadPoolExecutor() as pool:\n",
+    "        t0 = time.perf_counter()\n",
+    "        list(pool.map(thread_task, [0.2]*n))\n",
+    "        thread_elapsed = time.perf_counter() - t0\n",
+    "\n",
+    "    with concurrent.futures.ProcessPoolExecutor() as pool:\n",
+    "        t0 = time.perf_counter()\n",
+    "        list(pool.map(process_task, [0.2]*n))\n",
+    "        process_elapsed = time.perf_counter() - t0\n",
+    "\n",
+    "    return {\"asyncio\": async_elapsed, \"threads\": thread_elapsed, \"processes\": process_elapsed}\n",
+    "\n",
+    "await compare_concurrency(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2470870e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def cancellable(delay=1.0):\n",
+    "    try:\n",
+    "        await asyncio.sleep(delay)\n",
+    "        return \"done\"\n",
+    "    except asyncio.CancelledError:\n",
+    "        print(\"cancelled\")\n",
+    "        raise\n",
+    "\n",
+    "async def demo_timeout():\n",
+    "    try:\n",
+    "        return await asyncio.wait_for(cancellable(2.0), timeout=0.5)\n",
+    "    except asyncio.TimeoutError:\n",
+    "        return \"timed out\"\n",
+    "\n",
+    "await demo_timeout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "448e7ead",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- Mutation testing: try `mutmut` or `mutatest` to ensure tests kill mutants.\n",
+    "- Profile CPU with `cProfile`/`pyinstrument`; memory with `tracemalloc` as shown.\n",
+    "- Async shines for I/O-bound tasks; processes for CPU-bound; threads for C-extensions releasing the GIL."
    ]
   }
  ],
