--- a/computer science related/computer networks/tcp_dns_http_lab.ipynb
+++ b/computer science related/computer networks/tcp_dns_http_lab.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b9daa4f8",
+   "metadata": {},
+   "source": [
+    "# TCP, DNS, HTTP/2 vs HTTP/3 Lab\n",
+    "Objectives:\n",
+    "- TCP handshake & congestion control notes\n",
+    "- DNS resolution walkthrough (socket/getaddrinfo, dig output paste)\n",
+    "- HTTP/1.1 vs HTTP/2 vs HTTP/3 discussion (pcap placeholder)\n",
+    "- Small HTTP client with timeouts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1646c2cd",
@@ -15,6 +28,118 @@
     "import time\n",
     "\n",
     "# TODO: add experiments for TCP handshake, DNS queries, and HTTP/2 vs HTTP/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54f0f543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import socket\n",
+    "from contextlib import closing\n",
+    "from typing import Tuple\n",
+    "\n",
+    "def tcp_handshake(host: str, port: int, timeout: float = 3.0) -> Tuple[str, str]:\n",
+    "    \"\"\"Open a TCP socket to show local/remote addresses; closes immediately.\"\"\"\n",
+    "    with closing(socket.create_connection((host, port), timeout=timeout)) as s:\n",
+    "        local = f\"{s.getsockname()[0]}:{s.getsockname()[1]}\"\n",
+    "        remote = f\"{s.getpeername()[0]}:{s.getpeername()[1]}\"\n",
+    "    return local, remote\n",
+    "\n",
+    "try:\n",
+    "    print(tcp_handshake(\"example.com\", 80))\n",
+    "except OSError as exc:\n",
+    "    print(f\"TCP connect failed: {exc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4baef122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipaddress\n",
+    "\n",
+    "def dns_lookup(host: str):\n",
+    "    infos = socket.getaddrinfo(host, None)\n",
+    "    uniq = {}\n",
+    "    for family, _, _, _, sockaddr in infos:\n",
+    "        ip = sockaddr[0]\n",
+    "        uniq[ip] = ipaddress.ip_address(ip).version\n",
+    "    return uniq\n",
+    "\n",
+    "dns_lookup(\"example.com\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45699493",
+   "metadata": {},
+   "source": [
+    "### HTTP/1.1 vs HTTP/2 vs HTTP/3 notes\n",
+    "- HTTP/1.1: plain TCP + optional TLS; head-of-line blocking at TCP layer.\n",
+    "- HTTP/2: multiplexed streams over a single TCP connection; HPACK compression; still HOL at TCP.\n",
+    "- HTTP/3: QUIC over UDP with streams + TLS 1.3 built in; avoids TCP HOL; connection migration.\n",
+    "- Pcaps: capture with `tcpdump -i any \"port 80 or port 443\" -w http.pcap` then inspect stream counts.\n",
+    "- Tooling: `curl -v --http2` and `curl -v --http3` to compare negotiations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4211cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import http.client\n",
+    "\n",
+    "def http_get(host: str, path: str = \"/\", use_tls: bool = False, timeout: float = 3.0):\n",
+    "    conn_cls = http.client.HTTPSConnection if use_tls else http.client.HTTPConnection\n",
+    "    conn = conn_cls(host, timeout=timeout)\n",
+    "    try:\n",
+    "        conn.request(\"GET\", path)\n",
+    "        resp = conn.getresponse()\n",
+    "        body = resp.read(200)  # preview only\n",
+    "        return {\n",
+    "            \"status\": resp.status,\n",
+    "            \"reason\": resp.reason,\n",
+    "            \"headers\": dict(resp.getheaders()),\n",
+    "            \"body_preview\": body.decode(\"utf-8\", errors=\"ignore\"),\n",
+    "        }\n",
+    "    finally:\n",
+    "        conn.close()\n",
+    "\n",
+    "try:\n",
+    "    http_get(\"example.com\", \"/\")\n",
+    "except Exception as exc:\n",
+    "    print(f\"HTTP request failed: {exc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32d2760c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def with_retries(op, attempts=3, backoff=0.5):\n",
+    "    for i in range(attempts):\n",
+    "        try:\n",
+    "            return op()\n",
+    "        except Exception as exc:\n",
+    "            if i == attempts - 1:\n",
+    "                raise\n",
+    "            sleep = backoff * (2 ** i)\n",
+    "            print(f\"retry {i+1}/{attempts} after {exc}, sleeping {sleep:.2f}s\")\n",
+    "            time.sleep(sleep)\n",
+    "\n",
+    "# Example usage (commented to avoid repeated external calls)\n",
+    "# with_retries(lambda: http_get(\"example.com\", \"/\"))"
    ]
   }
  ],
